--- a/APICourseWorkProject.API/appsettings.json
+++ b/APICourseWorkProject.API/appsettings.json
@@ -1,11 +1,14 @@
 {
   "AppSettings": {
-    "Token": "my top secret key"
+    "Token": "My_top_secret_key"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionString": {
+      "DbConn": "server=DESKTOP-HLD49EM ,database=APICourseWorkProjectDB ,Trusted_Connection=true"
     }
   },
   "AllowedHosts": "*"
