--- a/APICourseWorkProject.API/appsettings.json
+++ b/APICourseWorkProject.API/appsettings.json
@@ -1,15 +1,15 @@
 {
-  "AppSettings": {
-    "Token": "My_top_secret_key"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionString": {
-      "DbConn": "server=DESKTOP-HLD49EM ,database=APICourseWorkProjectDB ,Trusted_Connection=true"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-HLD49EM;Database=APICourseWorkProjectDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Token": "My_top_secret_key"
+  }
 }
