--- a/CWProject.Data/CWProject.Data.csproj
+++ b/CWProject.Data/CWProject.Data.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.12" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    <ProjectReference Include="..\CWProject.Models\CWProject.Models.csproj" />
   </ItemGroup>
 
 </Project>
