--- a/CWProject.Services/CWProject.Services.csproj
+++ b/CWProject.Services/CWProject.Services.csproj
@@ -10,10 +10,12 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.0" />
+    <PackageReference Include="Realm" Version="10.18.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CWProject.Data\CWProject.Data.csproj" />
     <ProjectReference Include="..\CWProject.Models\CWProject.Models.csproj" />
   </ItemGroup>
 
